--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "webpack-dev-server --env.NODE_ENV=development --mode development --open --hot --https",
     "build": "webpack --env.NODE_ENV=production --mode production --progress --hide-modules"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lamejs": "^1.2.0"
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
